force-app/main/default/objects/Payment_Event__e/Payment_Event__e.object-meta.xml
<CustomObject>
    <description>Payment Event</description>
    <label>Payment Event</label>
    <pluralLabel>Payment Event</pluralLabel>
</CustomObject>