force-app/main/default/objects/Payment_Event__e/fields/Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Contact_Id__c</fullName>
    <label>Contact Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>