force-app/main/default/objects/Payment_Event__e/fields/Internal_Payment_Description__c.field-meta.xml
<CustomField>
    <fullName>Internal_Payment_Description__c</fullName>
    <description>Internal Payment Description</description>
    <label>Internal Payment Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>