force-app/main/default/objects/Payment_Event__e/fields/Payment_Details__c.field-meta.xml
<CustomField>
    <fullName>Payment_Details__c</fullName>
    <label>Payment Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>