force-app/main/default/objects/Payment_Event__e/fields/Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Id__c</fullName>
    <label>Payment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>