force-app/main/default/objects/Payment_Event__e/fields/Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>Payment_Type__c</fullName>
    <description>Payment Type - Card Payment / Direct Debit</description>
    <label>Payment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>