force-app/main/default/objects/Payment_Event__e/fields/Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Date__c</fullName>
    <description>Transaction Date</description>
    <label>Transaction Date</label>
    <type>DateTime</type>
</CustomField>